src/styles/global.css
@tailwind base;

::-webkit-scrollbar {
  width: 14px;
  height: 12px;
}
::-webkit-scrollbar-thumb {
  height: 6px;
  border: 4px solid rgba(0, 0, 0, 0);
  background-clip: padding-box;
  background-color: #e2e2e2;
  border-radius: 7px;
  -webkit-border-radius: 7px;
}
::-webkit-scrollbar-button {
  display: none;
  width: 0;
  height: 0;
}
::-webkit-scrollbar-corner,
::-webkit-scrollbar-track-piece {
  background-color: transparent;
}
html {
  scroll-behavior: smooth;
}
body {
  font-family: "Rosario", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 19px;
  line-height: 1.75rem;
  color: #9f9f9f;
  background-color: #fcfcfc;
}
@tailwind components;
.white {
  color: #fcfcfc;
}
.offset-text-left {
  position: absolute;
  left: 25%;
  transform: translate(-50%, 0);
}
.offset-text-right {
  position: absolute;
  right: 25%;
  transform: translate(50%, 0);
}
.offset-text-middle {
  position: absolute;
  right: 50%;
  transform: translate(50%, 0);
}
.underline {
  text-underline-offset: 6px;
  text-decoration-thickness: 1px;
}
.myBorder {
  border-top: #fcfcfc 1rem solid;
  border-bottom: #fcfcfc 1rem solid;
  border-left: none;
  border-right: none;
}
.myGrid {
  display: grid;
  grid-template-rows: repeat(2, auto);
  grid-row-gap: 100px;
  width: 100%;
}
.insideGrid {
  display: flex;
}

/** Animation */

@keyframes white-rect {
  0% {
    height: 0;
  }
  100% {
    height: 15vw;
  }
}
@keyframes title {
  0% {
    transform: translateY(-100%);
  }
  100% {
    transform: translateY(-50%);
    opacity: 1;
  }
}
@keyframes shrink-rect {
  0% {
    height: 15vw;
  }
  100% {
    height: 63px;
  }
}
@keyframes shrink-title {
  0% {
    transform: translateY(-50%);
    width: 65vw;
  }
  100% {
    transform: translateY(0);
    top: 16px;
    width: 300px;
  }
}
@keyframes delete-rect-title {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
@keyframes show-nav {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
/* Apply the animations to the relevant elements */
#white-rect {
  position: absolute;
  z-index: 20;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #fcfcfc;
  animation-name: white-rect, shrink-rect, delete-rect-title;
  animation-duration: 2s, 3s, 1s;
  animation-delay: 500ms, 5s, 9s;
  animation-timing-function: ease, ease, ease;
  animation-iteration-count: 1, 1, 1;
  animation-fill-mode: forwards, forwards, forwards;
}
/* mr-[0.5vw] 2xl:mr-[1.5vw] */
#title {
  position: absolute;
  height: fit-content;
  opacity: 0;
  width: 65.1vw;
  top: 15.3vw;
  left: 0;
  right: 0.5vw;
  margin: auto;
  z-index: 30;
  transform: translate(-50%, -100%);
  animation-name: title, shrink-title, delete-rect-title;
  animation-duration: 3s, 3s, 1s;
  animation-delay: 2250ms, 5s, 9s;
  animation-timing-function: ease, ease, ease-in;
  animation-iteration-count: 1, 1, 1;
  animation-fill-mode: forwards, forwards, forwards;
}
#menu {
  left: -100%;
  position: fixed;
  top: 60px;
  width: 100%;
  z-index: 30;
}
.openMenu {
  animation-name: menu-in, reveal;
  animation-duration: 750ms, 750ms;
  animation-delay: 0s, 10s;
  animation-timing-function: ease, ease;
  animation-fill-mode: forwards, forwards;
}

.closeMenu {
  animation-name: menu-out, hidden;
  animation-duration: 750ms, 750ms;
  animation-delay: 0s, 10s;
  animation-timing-function: ease, ease;
  animation-fill-mode: forwards, forwards;
}
@keyframes menu-in {
  0% {
    right: 100%;
  }
  100% {
    left: 0;
  }
}
@keyframes menu-out {
  0% {
    left: 0;
  }
  100% {
    right: 100%;
  }
}
@keyframes hidden {
  0% {
    visibility: visible;
  }
  100% {
    visibility: hidden;
  }
}
@keyframes reveal {
  0% {
    visibility: hidden;
  }
  100% {
    visibility: visible;
  }
}

/** Media queries */
@media (min-width: 1536px) {
  #title {
    right: 1.5vw;
  }
}
@media (min-width: 1024px) {
  #absoluteDiv {
    height: 106.5vw;
  }
  .image1 {
    top: 4vw;
    z-index: 10;
  }
  .image2 {
    right: 2vw;
    width: 63.4%;
  }
  .image3 {
    top: 40vw !important;
    left: 2vw;
    width: 39%;
  }
  .image3 video {
    object-fit: contain;
    aspect-ratio: auto;
  }
  .image4 {
    top: 65vw !important;
    right: 10vw;
    width: 56%;
  }
}
@tailwind utilities;

